# FLinst

./: .gitignore  AGENTS.md  README.md  active.ini  build_spincore.py  collect100.py  cross_file.txt  data_files.csv  entry_point_template.py  gds_for_tune.py  meson.build  meson_options.txt  proc_shim_y.py  pyproject.toml  setup.py
.github/scripts/: check_single_use.py
.github/workflows/: flake8.yml  todo_check.sh
Instruments/: HP6623A.py  HallProbe.py  HallProbe_ProLogix.py  HallProbe_ProLogix_new.py  __init__.py  afg.py  bridge12.py  channel_property.py  cmd.py  field_feedback.py  gds.py  gds_tune.py  gds_tune_gui.py  genesys.py  gigatronics.py  gpib_eth.py  hall_probe.py  inst_dict_property.py  instrument_control.py  instrument_control_server.py  instrument_control_server_dummy.py  just_quit.py  logobj.py  microwave_tuning_gui.py  nmr_signal_gui.py  power_control.py  power_control_server.py  power_supply.py  serial_instrument.py  shim_current_mapping.py  shim_y.py
SpinCore_pp/: SpinCore_pp.c  SpinCore_pp.i  SpinCore_pp.py  __init__.py  beta_conv.py  config_params.yaml  config_parser_fn.py  field_control.py  meson.build  power_helper.py  pulse_length_conv.py  save_data.py  simple_fns.py
SpinCore_pp/ppg/: IR.py  echo.py  generic.py
examples/: 90time_conv.py  AFG_output_to_GDS.py  AFG_output_to_SC.py  Ep_spacing.py  Hahn_echo_proc.py  SC_noise_capture.py  active.ini  adc_offset.py  basic_config_example.py  bridge12_basic.py  calib_pulses.py  calibrate_test_signal.py  calibrate_z0_voltage_field.py  capture_Hahn_GDS.py  capture_gds.py  capture_noise_SC.py  capture_noise_SC_standard.py  collect100.py  collect_GDS.py  combined_ODNP.py  demo_calibration.py  find_gamma_eff.py  gds_for_tune.py  genesys.py  genesys_basic.py  get_ready.sh  hall_probe.py  magnet_response.py  proc_ODNP_rough.py  read_log.py  run_COSY_DQF.py  run_CPMG.py  run_CPMG_calib.py  run_CPMG_mw.py  run_FS.py  run_Hahn_echo.py  run_Hahn_echo_mw.py  run_IR.py  run_T1CPMG.py  run_field_dep_justMw.py  (+28 more)
examples/magnet_control/: current_resolution.py  current_sweep.py  display_files.py  genesys.py  magnet_response.py  magnet_stable.py  plot_current_rounding.py
examples/shim_calibration/: calibrate_z0_voltage_field.py  voltage_output.py
swig/Hahn_echo_ph/: Hahn_echo_ph.c  proc_Hahn_echo_ph.py  run_Hahn_echo_ph.py
tests/: test_channel_property.py  test_hp6623a_channel_property.py  test_hp6623a_rounding.py  test_inst_dict_property.py  test_logobj.py  test_power_control_live_shim_properties.py  test_single_use_checker.py
