option('conda_headers', type: 'string', value: 'C:/ProgramData/Anaconda3/include', description: 'Path to Anaconda headers')
option('conda_libs', type: 'string', value: 'UNSET!!', description: 'Path to Anaconda libraries')
option('numpy', type: 'string', value: 'C:/ProgramData/Anaconda3/lib/site-packages/numpy/core/include', description: 'Path to NumPy headers')
option('enable_spincore_pp', type: 'boolean', value: true, description: 'Enable SpinCore_pp compilation')

