[build-system]
requires = ["meson-python", "numpy", "setuptools", "swig"]
build-backend = "mesonpy"

[project]
name = "FLinst"
version = "0.1.0"
description = "SpinCore and instrument control packages"
authors = [
    {name = "Beaton, Franck, Guinness", email = "jmfranck@notgiven.com"}
]
license = {file = "LICENSE.md"}
dependencies = [
    "numpy",
    "h5py",
    "pyserial>=3.0"
]

[project.scripts]
calc_tempol_vd = "SpinCore_pp.calc_vdlist:print_tempo_vdlist"
power_control_server = "Instruments.power_control_server:main"
quit_power_control = "Instruments.just_quit:main"
FLInst = "Instruments.cmd:cmd"

[tool.mesonpy]
setup-kwargs = { native_file = "cross_file.txt" }
