# run like this to install without building spincore:
# pip install -e . --no-build-isolation --config-settings=setup-args="-Denable_spincore_pp=false"
[build-system]
requires = ["meson-python", "numpy", "setuptools", "swig"]
build-backend = "mesonpy"

[project]
name = "FLinst"
version = "0.1.0"
description = "SpinCore and instrument control packages"
authors = [
    {name = "Beaton, Franck, Guinness", email = "jmfranck@notgiven.com"}
]
license = {file = "LICENSE.md"}
dependencies = [
    "numpy",
    "h5py",
    "pyserial>=3.0"
]

[project.scripts]
calc_tempol_vd = "SpinCore_pp.calc_vdlist:print_tempo_vdlist"
power_control_server = "Instruments.power_control_server:main"
quit_power_control = "Instruments.just_quit:main"
FLInst = "Instruments.cmd:cmd"

[tool.mesonpy]
setup-kwargs = { native_file = "cross_file.txt" }

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39']
preview = true

[tool.ruff]
line-length = 79
ignore = [
  "E203","E225","E226","E231","E261","E265",
  "E293","E302","E305","E306","E401","E731",
  "E741","Q002","W291","W293","W503",
]
select = ["E","F","W","Q"]
inline-quotes = "double"
builtins = ["get_ipython"]